# beat-detector

./: Cargo.toml  README.md  rust-toolchain.toml
examples/: bench.rs  minimal.rs
external-examples/: Cargo.toml  README.md
external-examples/.cargo/: config.toml
src/: audio_history.rs  band_analyzer.rs  beat_detector.rs  beat_info.rs  beat_intensity.rs  envelope_detector.rs  lib.rs  record.rs  test_util.rs
src/peak/: local_min_max_iterator.rs  mod.rs  peak_detector.rs  zero_of_function_iterator.rs
src/record/: audio_input.rs  mod.rs  util.rs
src/util/: audio_ring_buffer.rs  mod.rs
