[package]
name = "external-examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ws2812_spi_light_on_beat"
required-features = ["ws2818"]

[[bin]]
name = "gui_screen_flash_on_beat"
required-features = ["gui"]

[features]
default = []
gui = ["minifb", "ctrlc"]
ws2818 = ["ws2818-rgb-led-spi-driver", "rand"]

[dependencies]
beat-detector = { path = "../" }

ctrlc = { version = "3.1", features = ["termination"], optional = true } # for examples
ws2818-rgb-led-spi-driver = { version = "2.0", optional = true }
rand = { version = "0.8", optional = true }
minifb = { version = "0.22", optional = true }

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
# only differences from default settings
codegen-units = 1
lto = true
